--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+*{
+  margin: 0;
+}
 header{
   background-color: lightblue;
+}
+html,body{
+  height: 100%;
+}
+.Wrapper{
+    min-height: 100%;
+    height: auto;
+    height: 100%;
+    margin-bottom: -50px; /*footer's height*/
+}
+.Favorites{
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+}
+.Favorite{
+  width: 100%;
+}
+footer,#push{
+  height: 50px;
+}
+footer{
+  background-color: rgb(200, 255, 200);
 }
