rounded Box & overflowing image hided

--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ a{
   height: 10em;
   margin: 10px;
   background-color: yellow;
+  border-radius: 2em;
+  overflow: hidden;
 }
 footer,#push{
   height: 50px;
